--- a/Fuentes/ArquetipoMicroservicioBypass/pom.xml
+++ b/Fuentes/ArquetipoMicroservicioBypass/pom.xml
@@ -14,26 +14,91 @@
 	<name>ArquetipoMicroservicioBypass</name>
 	<description>Arquetipo de microservicio utilizando spring boot y apache camel para bypasseadores</description>
 
+	<!-- Datos del Proceso -->
+	<inceptionYear>2019</inceptionYear>
+	<developers>
+		<developer>
+			<id>concamil</id>
+			<name>Camilo Contreras</name>
+			<email>contreras.camilo32@gmail.com</email>
+		</developer>
+	</developers>
+
 	<properties>
 		<java.version>1.8</java.version>
+		<version.camel>2.24.1</version.camel>
 	</properties>
 
+	<!-- Dependencias -->
 	<dependencies>
+
+		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.camel</groupId>
-			<artifactId>camel-spring-boot-starter</artifactId>
-			<version>2.24.0</version>
-		</dependency>
-
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Camel -->
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-spring-boot-starter</artifactId>
+			<version>${version.camel}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-servlet-starter</artifactId>
+			<version>${version.camel}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-jackson-starter</artifactId>
+			<version>${version.camel}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-http</artifactId>
+			<version>${version.camel}</version>
+		</dependency>
+
+		<!-- Oracle - Driver Nativo -->
+		<dependency>
+			<groupId>com.oracle.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>12.2.0.1</version>
+		</dependency>
+
+		<!-- Uso de properties yml -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+
+		<!-- Libreria para calcular el tiempo -->
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+		</dependency>
+
+		<!-- Base 64 -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+		</dependency>
+
+		<!-- Formateador para JSON -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -42,6 +107,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>cl.poc.microservicio.launcher.ArquetipoMicroservicioByPassApplication</mainClass>
+				</configuration>
+			</plugin>
+			
 		</plugins>
 	</build>
 
