--- a/Fuentes/ArquetipoMicroservicioBypass/src/main/resources/application.properties
+++ b/Fuentes/ArquetipoMicroservicioBypass/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 # Configuracion de este microservicio
 
-# Configuracion del path raiz del proyecto y puerto a exponer por defecto
-server.servlet.context-path=/ArquetipoMicroservicio
+# Configuracion REST
+server.servlet.context-path=/ArquetipoMicroservicioByPass
 server.port=8081
+camel.component.servlet.mapping.contextPath=/api/*
 
 # Conexion BD
 spring.datasource.url=jdbc:oracle:thin:@[IP]:[PUERTO]:[ESQUEMA]
