--- a/Fuentes/rest-camel-bypass/src/main/resources/application.properties
+++ b/Fuentes/rest-camel-bypass/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 # Configuracion del proceso
-
+server.servlet.context-path=/CamelBypass
+server.port=8081
 camel.component.servlet.mapping.contextPath=/api/*
