configuracion de cors

--- a/Fuentes/rest-camel-bypass/src/main/resources/application.properties
+++ b/Fuentes/rest-camel-bypass/src/main/resources/application.properties
@@ -1,4 +1,11 @@
-# Configuracion del proceso
+# Configuracion del Microservicio
+
+# Camel
 server.servlet.context-path=/CamelBypass
 server.port=8081
 camel.component.servlet.mapping.contextPath=/api/*
+
+# CORS
+camel.rest.enable-cors=true
+camel.rest.cors-headers.Access-Control-Allow-Origin=*
+camel.rest.cors-headers.Access-Control-Allow-Methods=GET,POST,OPTIONS
