--- a/Fuentes/rest-camel-bypass/src/main/resources/application.properties
+++ b/Fuentes/rest-camel-bypass/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 # Configuracion del Microservicio
 
-# Camel
+# Configuracion para apache camel
 server.servlet.context-path=/CamelBypass
 server.port=8081
 camel.component.servlet.mapping.contextPath=/api/*
+camel.rest.binding-mode=json
 
-# CORS
+# CORS de camel
 camel.rest.enable-cors=true
 camel.rest.cors-headers.Access-Control-Allow-Origin=*
 camel.rest.cors-headers.Access-Control-Allow-Methods=GET,POST,OPTIONS
