--- a/Fuentes/rest-camel-bypass/pom.xml
+++ b/Fuentes/rest-camel-bypass/pom.xml
@@ -3,7 +3,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<!-- Version spring boot utilizada -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -11,7 +11,7 @@
 		<version>2.1.8.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	
+
 	<groupId>cl.poc.microservicio.bypass</groupId>
 	<artifactId>rest-camel-bypass</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -34,6 +34,13 @@
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-spring-boot-starter</artifactId>
+			<version>${camel.version}</version>
+		</dependency>
+
+		<!-- Necesaria para responder con formatos json en los endpoints rest -->
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-jackson</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
 
