--- a/Fuentes/rest-camel-bypass/pom.xml
+++ b/Fuentes/rest-camel-bypass/pom.xml
@@ -56,6 +56,18 @@
 			<version>${camel.version}</version>
 		</dependency>
 
+		<!-- Documentacion para el servicio rest -->
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-swagger-java-starter</artifactId>
+			<version>${camel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.woodstox</groupId>
+			<artifactId>stax2-api</artifactId>
+			<version>4.2</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
