--- a/Fuentes/rest-camel-bypass/src/main/resources/application.properties
+++ b/Fuentes/rest-camel-bypass/src/main/resources/application.properties
@@ -6,6 +6,12 @@ server.port=8081
 camel.component.servlet.mapping.contextPath=/api/*
 camel.rest.binding-mode=json
 
+# Ruta para ver la documentacion del servicio
+# Final URL: http://localhost:8081/CamelBypass/api/swagger
+camel.rest.api-context-path=/swagger
+camel.rest.api-property.api.tittle=Api Rest de ejemplo
+camel.rest.api-property.api.version=1.0.0
+
 # CORS de camel
 camel.rest.enable-cors=true
 camel.rest.cors-headers.Access-Control-Allow-Origin=*
