--- a/Fuentes/rest-camel-bypass/pom.xml
+++ b/Fuentes/rest-camel-bypass/pom.xml
@@ -56,6 +56,12 @@
 			<version>${camel.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-cxf</artifactId>
+			<version>${camel.version}</version>
+		</dependency>
+
 		<!-- Documentacion para el servicio rest -->
 		<dependency>
 			<groupId>org.apache.camel</groupId>
